--- a/extras/exercises/01_pytorch_workflow_exercises.ipynb
+++ b/extras/exercises/01_pytorch_workflow_exercises.ipynb
@@ -5,8 +5,6 @@
     "colab": {
       "name": "01_pytorch_workflow_exercises.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNYzatJtFkfUqqdiR6rYwVL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/extras/exercises/01_pytorch_workflow_exercises.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/anik-c/pytorch-deep-learning/blob/main/extras/exercises/01_pytorch_workflow_exercises.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -51,30 +49,33 @@
     {
       "cell_type": "code",
       "source": [
-        "# Import necessary libraries\n"
+        "# Import necessary libraries\n",
+        "import torch\n",
+        "import torch.nn as nn"
       ],
       "metadata": {
         "id": "Glu2fM4dkNlx"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Setup device-agnostic code\n"
+        "# Setup device-agnostic code\n",
+        "device = \"cuda\" if torch.cuda.is_available() else \"cpu\""
       ],
       "metadata": {
         "id": "LqKhXY26m31s"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
         "## 1. Create a straight line dataset using the linear regression formula (`weight * X + bias`).\n",
-        "  * Set `weight=0.3` and `bias=0.9` there should be at least 100 datapoints total. \n",
+        "  * Set `weight=0.3` and `bias=0.9` there should be at least 100 datapoints total.\n",
         "  * Split the data into 80% training, 20% testing.\n",
         "  * Plot the training and testing data so it becomes visual.\n",
         "\n",
@@ -99,36 +100,79 @@
       "cell_type": "code",
       "source": [
         "# Create the data parameters\n",
-        "\n",
+        "weight=0.3\n",
+        "bias=0.9\n",
         "\n",
         "# Make X and y using linear regression feature\n",
+        "start=0\n",
+        "step=1/100\n",
+        "stop=1\n",
         "\n",
+        "X=torch.arange(start,stop,step).unsqueeze(dim=-1)\n",
+        "y=weight*X+bias\n",
         "\n",
         "print(f\"Number of X samples: {len(X)}\")\n",
         "print(f\"Number of y samples: {len(y)}\")\n",
         "print(f\"First 10 X & y samples:\\nX: {X[:10]}\\ny: {y[:10]}\")"
       ],
       "metadata": {
-        "id": "KbDG5MV7jhvE"
+        "id": "KbDG5MV7jhvE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a9968643-f026-4bc0-d258-c305e5fa08c7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of X samples: 100\n",
+            "Number of y samples: 100\n",
+            "First 10 X & y samples:\n",
+            "X: tensor([[0.0000],\n",
+            "        [0.0100],\n",
+            "        [0.0200],\n",
+            "        [0.0300],\n",
+            "        [0.0400],\n",
+            "        [0.0500],\n",
+            "        [0.0600],\n",
+            "        [0.0700],\n",
+            "        [0.0800],\n",
+            "        [0.0900]])\n",
+            "y: tensor([[0.9000],\n",
+            "        [0.9030],\n",
+            "        [0.9060],\n",
+            "        [0.9090],\n",
+            "        [0.9120],\n",
+            "        [0.9150],\n",
+            "        [0.9180],\n",
+            "        [0.9210],\n",
+            "        [0.9240],\n",
+            "        [0.9270]])\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Split the data into training and testing\n"
+        "# Split the data into training and testing\n",
+        "data_split=int(0.8 * len(X))\n",
+        "X_train, y_train = X[:data_split], y[:data_split]\n",
+        "X_test, y_test = X[data_split:], y[data_split:]"
       ],
       "metadata": {
         "id": "GlwtT1djkmLw"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Plot the training and testing data \n"
+        "# Plot the training and testing data\n"
       ],
       "metadata": {
         "id": "29iQZFNhlYJ-"
@@ -139,9 +183,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 2. Build a PyTorch model by subclassing `nn.Module`. \n",
-        "  * Inside should be a randomly initialized `nn.Parameter()` with `requires_grad=True`, one for `weights` and one for `bias`. \n",
-        "  * Implement the `forward()` method to compute the linear regression function you used to create the dataset in 1. \n",
+        "## 2. Build a PyTorch model by subclassing `nn.Module`.\n",
+        "  * Inside should be a randomly initialized `nn.Parameter()` with `requires_grad=True`, one for `weights` and one for `bias`.\n",
+        "  * Implement the `forward()` method to compute the linear regression function you used to create the dataset in 1.\n",
         "  * Once you've constructed the model, make an instance of it and check its `state_dict()`.\n",
         "  * **Note:** If you'd like to use `nn.Linear()` instead of `nn.Parameter()` you can."
       ],
@@ -152,29 +196,55 @@
     {
       "cell_type": "code",
       "source": [
-        "# Create PyTorch linear regression model by subclassing nn.Module"
+        "# Create PyTorch linear regression model by subclassing nn.Module\n",
+        "class RegressionModel(nn.Module):\n",
+        "  def __init__(self):\n",
+        "    super().__init__()\n",
+        "    self.linear=nn.Linear(in_features=1,out_features=1)\n",
+        "\n",
+        "  def forward(self,X):\n",
+        "    return self.linear(X)"
       ],
       "metadata": {
         "id": "qzd__Y5rjtB8"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Instantiate the model and put it to the target device\n"
+        "# Instantiate the model and put it to the target device\n",
+        "model=RegressionModel()\n",
+        "model.to(device)"
       ],
       "metadata": {
-        "id": "5LdcDnmOmyQ2"
+        "id": "5LdcDnmOmyQ2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a50a7437-d4a8-4b09-e2e3-4350cae9a759"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RegressionModel(\n",
+              "  (linear): Linear(in_features=1, out_features=1, bias=True)\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## 3. Create a loss function and optimizer using `nn.L1Loss()` and `torch.optim.SGD(params, lr)` respectively. \n",
+        "## 3. Create a loss function and optimizer using `nn.L1Loss()` and `torch.optim.SGD(params, lr)` respectively.\n",
         "  * Set the learning rate of the optimizer to be 0.01 and the parameters to optimize should be the model parameters from the model you created in 2.\n",
         "  * Write a training loop to perform the appropriate training steps for 300 epochs.\n",
         "  * The training loop should test the model on the test dataset every 20 epochs."
@@ -186,64 +256,96 @@
     {
       "cell_type": "code",
       "source": [
-        "# Create the loss function and optimizer\n"
+        "# Create the loss function and optimizer\n",
+        "loss_fn=nn.L1Loss()\n",
+        "optimizer=torch.optim.SGD(params=model.parameters(),lr=0.01)"
       ],
       "metadata": {
         "id": "ltvoZ-FWjv1j"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Training loop\n",
-        "\n",
+        "torch.manual_seed(42)\n",
         "\n",
         "# Train model for 300 epochs\n",
-        "\n",
+        "epochs=300\n",
         "\n",
         "# Send data to target device\n",
-        "\n",
+        "X_train=X_train.to(device)\n",
+        "y_train=y_train.to(device)\n",
+        "X_test=X_test.to(device)\n",
+        "y_test=y_test.to(device)\n",
         "\n",
         "for epoch in range(epochs):\n",
         "  ### Training\n",
         "\n",
         "  # Put model in train mode\n",
-        "  \n",
+        "  model.train()\n",
         "\n",
         "  # 1. Forward pass\n",
-        "  \n",
+        "  y_pred=model(X_train)\n",
         "\n",
         "  # 2. Calculate loss\n",
-        "  \n",
+        "  loss=loss_fn(y_pred,y_train)\n",
         "\n",
         "  # 3. Zero gradients\n",
-        "  \n",
+        "  optimizer.zero_grad()\n",
         "\n",
         "  # 4. Backpropagation\n",
-        "  \n",
+        "  loss.backward()\n",
         "\n",
         "  # 5. Step the optimizer\n",
-        "  \n",
+        "  optimizer.step()\n",
         "\n",
         "  ### Perform testing every 20 epochs\n",
         "  if epoch % 20 == 0:\n",
         "\n",
-        "    # Put model in evaluation mode and setup inference context \n",
-        "    \n",
+        "    # Put model in evaluation mode and setup inference context\n",
+        "    model.eval()\n",
+        "    with torch.inference_mode():\n",
         "      # 1. Forward pass\n",
-        "      \n",
+        "      test_pred=model(X_test)\n",
         "      # 2. Calculate test loss\n",
-        "\n",
+        "      test_loss=loss_fn(test_pred,y_test)\n",
         "      # Print out what's happening\n",
         "      print(f\"Epoch: {epoch} | Train loss: {loss:.3f} | Test loss: {test_loss:.3f}\")"
       ],
       "metadata": {
-        "id": "xpE83NvNnkdV"
+        "id": "xpE83NvNnkdV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "54bea279-3601-4948-e171-54d340bebd85"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch: 0 | Train loss: 0.899 | Test loss: 1.182\n",
+            "Epoch: 20 | Train loss: 0.668 | Test loss: 0.911\n",
+            "Epoch: 40 | Train loss: 0.437 | Test loss: 0.640\n",
+            "Epoch: 60 | Train loss: 0.205 | Test loss: 0.369\n",
+            "Epoch: 80 | Train loss: 0.060 | Test loss: 0.165\n",
+            "Epoch: 100 | Train loss: 0.047 | Test loss: 0.113\n",
+            "Epoch: 120 | Train loss: 0.040 | Test loss: 0.095\n",
+            "Epoch: 140 | Train loss: 0.033 | Test loss: 0.078\n",
+            "Epoch: 160 | Train loss: 0.027 | Test loss: 0.062\n",
+            "Epoch: 180 | Train loss: 0.020 | Test loss: 0.046\n",
+            "Epoch: 200 | Train loss: 0.013 | Test loss: 0.030\n",
+            "Epoch: 220 | Train loss: 0.006 | Test loss: 0.014\n",
+            "Epoch: 240 | Train loss: 0.009 | Test loss: 0.005\n",
+            "Epoch: 260 | Train loss: 0.009 | Test loss: 0.005\n",
+            "Epoch: 280 | Train loss: 0.009 | Test loss: 0.005\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -258,13 +360,51 @@
     {
       "cell_type": "code",
       "source": [
-        "# Make predictions with the model\n"
+        "# Make predictions with the model\n",
+        "model.eval()\n",
+        "with torch.inference_mode():\n",
+        "  pred=model(X_test)\n",
+        "pred"
       ],
       "metadata": {
-        "id": "bbMPK5Qjjyx_"
+        "id": "bbMPK5Qjjyx_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9cf0b0ae-bcc2-46c2-b314-bb4d19022546"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1.1484],\n",
+              "        [1.1513],\n",
+              "        [1.1543],\n",
+              "        [1.1573],\n",
+              "        [1.1603],\n",
+              "        [1.1633],\n",
+              "        [1.1662],\n",
+              "        [1.1692],\n",
+              "        [1.1722],\n",
+              "        [1.1752],\n",
+              "        [1.1782],\n",
+              "        [1.1812],\n",
+              "        [1.1841],\n",
+              "        [1.1871],\n",
+              "        [1.1901],\n",
+              "        [1.1931],\n",
+              "        [1.1961],\n",
+              "        [1.1991],\n",
+              "        [1.2020],\n",
+              "        [1.2050]], device='cuda:0')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -293,37 +433,105 @@
       "source": [
         "from pathlib import Path\n",
         "\n",
-        "# 1. Create models directory \n",
+        "# 1. Create models directory\n",
+        "MODEL_PATH = Path(\"models\")\n",
+        "MODEL_PATH.mkdir(parents=True, exist_ok=True)\n",
         "\n",
+        "# 2. Create model save path\n",
+        "MODEL_NAME =\"model.pth\"\n",
+        "MODEL_SAVE_PATH= MODEL_PATH / MODEL_NAME\n",
         "\n",
-        "# 2. Create model save path \n",
-        "\n",
-        "# 3. Save the model state dict\n"
+        "# 3. Save the model state dict\n",
+        "torch.save(obj=model.state_dict(),f=MODEL_SAVE_PATH)"
       ],
       "metadata": {
         "id": "hgxhgD14qr-i"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Create new instance of model and load saved state dict (make sure to put it on the target device)\n"
+        "# Create new instance of model and load saved state dict (make sure to put it on the target device)\n",
+        "loaded_model=RegressionModel()\n",
+        "loaded_model.load_state_dict(torch.load(MODEL_SAVE_PATH))\n",
+        "loaded_model.to(device)"
       ],
       "metadata": {
-        "id": "P9vTgiLRrJ7T"
+        "id": "P9vTgiLRrJ7T",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ec251429-ff34-4c88-8ecf-78862c24dd21"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RegressionModel(\n",
+              "  (linear): Linear(in_features=1, out_features=1, bias=True)\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Make predictions with loaded model and compare them to the previous\n"
+        "# Make predictions with loaded model and compare them to the previous\n",
+        "loaded_model(X_test)"
       ],
       "metadata": {
-        "id": "8UGX3VebrVtI"
+        "id": "8UGX3VebrVtI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7991e760-93d9-40ef-f2e4-efadc3fdfbed"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1.1484],\n",
+              "        [1.1513],\n",
+              "        [1.1543],\n",
+              "        [1.1573],\n",
+              "        [1.1603],\n",
+              "        [1.1633],\n",
+              "        [1.1662],\n",
+              "        [1.1692],\n",
+              "        [1.1722],\n",
+              "        [1.1752],\n",
+              "        [1.1782],\n",
+              "        [1.1812],\n",
+              "        [1.1841],\n",
+              "        [1.1871],\n",
+              "        [1.1901],\n",
+              "        [1.1931],\n",
+              "        [1.1961],\n",
+              "        [1.1991],\n",
+              "        [1.2020],\n",
+              "        [1.2050]], device='cuda:0', grad_fn=<AddmmBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "-im_CtnXkdGa"
       },
       "execution_count": null,
       "outputs": []
