Fix LaTeX cell issue

--- a/docs/00_pytorch_fundamentals.ipynb
+++ b/docs/00_pytorch_fundamentals.ipynb
@@ -1907,9 +1907,11 @@
     "\n",
     "The [`torch.nn.Linear()`](https://pytorch.org/docs/1.9.1/generated/torch.nn.Linear.html) module (we'll see this in action later on), also known as a feed-forward layer or fully connected layer, implements a matrix multiplication between an input `x` and a weights matrix `A`.\n",
     "\n",
-    "$$\n",
-    "y = x\\cdot{A^T} + b\n",
-    "$$\n",
+    "\n",
+    $$,
+    "y = x \cdot A^\top + b",
+    $$,
+    "\n",
     "\n",
     "Where:\n",
     "* `x` is the input to the layer (deep learning is a stack of layers like `torch.nn.Linear()` and others on top of each other).\n",
