--- a/docs/00_pytorch_fundamentals.ipynb
+++ b/docs/00_pytorch_fundamentals.ipynb
@@ -1908,9 +1908,7 @@
     "The [`torch.nn.Linear()`](https://pytorch.org/docs/1.9.1/generated/torch.nn.Linear.html) module (we'll see this in action later on), also known as a feed-forward layer or fully connected layer, implements a matrix multiplication between an input `x` and a weights matrix `A`.\n",
     "\n",
     "\n",
-    $$,
-    "y = x \cdot A^\top + b",
-    $$,
+    "$$ y = x \\cdot A^\\top + b $$"
     "\n",
     "\n",
     "Where:\n",
