--- a/docs/00_pytorch_fundamentals.ipynb
+++ b/docs/00_pytorch_fundamentals.ipynb
@@ -1907,9 +1907,7 @@
     "\n",
     "The [`torch.nn.Linear()`](https://pytorch.org/docs/1.9.1/generated/torch.nn.Linear.html) module (we'll see this in action later on), also known as a feed-forward layer or fully connected layer, implements a matrix multiplication between an input `x` and a weights matrix `A`.\n",
     "\n",
-    "\n",
-    "$$ y = x \\cdot A^\\top + b $$"
-    "\n",
+    "$$ y = x \\cdot A^\\top + b $$\n",
     "\n",
     "Where:\n",
     "* `x` is the input to the layer (deep learning is a stack of layers like `torch.nn.Linear()` and others on top of each other).\n",
@@ -1924,8 +1922,8 @@
     "\n",
     "Try changing the values of `in_features` and `out_features` below and see what happens.\n",
     "\n",
-    "Do you notice anything to do with the shapes?"
-   ]
+    "Do you notice anything to do with the shapes?\n"
+  ]
   },
   {
    "cell_type": "code",
