--- a/docs/00_pytorch_fundamentals.ipynb
+++ b/docs/00_pytorch_fundamentals.ipynb
@@ -1918,7 +1918,7 @@
     "* `b` is the bias term used to slightly offset the weights and inputs.\n",
     "* `y` is the output (a manipulation of the input in the hopes to discover patterns in it).\n",
     "\n",
-    "This is a linear function (you may have seen something like $y = mx+b$ in high school or elsewhere), and can be used to draw a straight line!\n",
+    "This is a linear function (you may have seen something like $$y = mx+b$$ in high school or elsewhere), and can be used to draw a straight line!\n",
     "\n",
     "Let's play around with a linear layer.\n",
     "\n",
