Fixed Broken Latex

--- a/00_pytorch_fundamentals.ipynb
+++ b/00_pytorch_fundamentals.ipynb
@@ -1923,9 +1923,7 @@
     "\n",
     "The [`torch.nn.Linear()`](https://pytorch.org/docs/1.9.1/generated/torch.nn.Linear.html) module (we'll see this in action later on), also known as a feed-forward layer or fully connected layer, implements a matrix multiplication between an input `x` and a weights matrix `A`.\n",
     "\n",
-    "$$\n",
-    "y = x\\cdot{A^T} + b\n",
-    "$$\n",
+    "$$y = x\\cdot{A^T} + b$$\n",
     "\n",
     "Where:\n",
     "* `x` is the input to the layer (deep learning is a stack of layers like `torch.nn.Linear()` and others on top of each other).\n",
@@ -3845,7 +3843,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
