--- a/02_pytorch_classification.ipynb
+++ b/02_pytorch_classification.ipynb
@@ -1152,9 +1152,7 @@
     "\n",
     "Which implements two layers of `nn.Linear()` which internally calls the following equation:\n",
     "\n",
-    "$$\n",
-    "\\mathbf{y} = x \\cdot \\mathbf{Weights}^T  + \\mathbf{bias}\n",
-    "$$\n",
+    "$$\\mathbf{y} = x \\cdot \\mathbf{Weights}^T  + \\mathbf{bias}$$\n",
     "\n",
     "The *raw outputs* (unmodified) of this equation ($y$) and in turn, the raw outputs of our model are often referred to as [**logits**](https://datascience.stackexchange.com/a/31045).\n",
     "\n",
@@ -2757,11 +2755,11 @@
     "\n",
     "The sigmoid function formula goes like so:\n",
     "\n",
-    "$$ out_i = \\frac{1}{1+e^{-input_i}} $$ \n",
+    "$$out_i = \\frac{1}{1+e^{-input_i}}$$ \n",
     "\n",
     "Or using $x$ as input:\n",
     "\n",
-    "$$ S(x) = \\frac{1}{1+e^{-x_i}} $$\n",
+    "$$S(x) = \\frac{1}{1+e^{-x_i}}$$\n",
     "\n",
     "Where $S$ stands for sigmoid, $e$ stands for [exponential](https://en.wikipedia.org/wiki/Exponential_function) ([`torch.exp()`](https://pytorch.org/docs/stable/generated/torch.exp.html)) and $i$ stands for a particular element in a tensor.\n",
     "\n",
@@ -3759,7 +3757,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "ai",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3773,7 +3771,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
